<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.jmouse</groupId>
        <artifactId>jmouse-parent</artifactId>
        <version>1.0.0-Beta</version>
    </parent>

    <artifactId>testing-ground</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- jMouse -->
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-el</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-expression</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-el</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmouse</groupId>
            <artifactId>jmouse-web</artifactId>
        </dependency>

        <!-- SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>